1.0.0
    - Initial setup
1.0.1
    - Cleaned up old code not needed
    - Added in flogger for logging
    - Introduced ini configs for settings
1.0.2
    - Upgraded jogl to latest (2.3.2)
    - Cleaned up code to work with jogl 2.3.2
    - Changed ARB calls to normal GLSL calls
        - Primarily affected GLShader & GLProgram
        - Also removed ARB extension checks for VAOs/Instancing since the ARB functions weren't used either way
          thus making VAO support only for OpenGL 3.0+ users, and Instancing for OpenGL 3.3+ users
    - Removed unused imports in various locations
1.0.3
    - Added RGB to possible settings
    - Added additional profiling to MapView
1.0.4
    - Back to Java 8 since it's become clear that certain code outside of my reach can't support it
1.0.5
    - Added back a lot of Ape graphics settings, all of these can be found in the Options window
        - Skip loading screens
        - Toggle flavor objects
        - Display more flavor objects
        - Symmetric Outlines
        - Cel Shading via options
        - Shadow quality/size
        - MSAA levels
        - Wireframe mode
        - Toggle weather
        - Toggle animations
        - Toggle map grids on/off
        - Toggle gobs on/off
        - Nightvision
    - Settings should create automatically if the file doesn't exist, minor issues with loading fixed
    - Pushed GLSettings configurations to Settings
    - :gl commands are no longer a thing, use the options menu
    - Fixed mistake that would cause a gl error when deleting glPrograms since it was calling the wrong function
    - Pushed anisotropic validation off into TexGL
    - Added in pausing via 'p' key
    - Added back the "No Gob Audio" option under Audio Options.
    - Added back in the Grid mode via 'g' key
    - Added back flatworld, can be toggled in the Options window under Graphics.
    - Added back quick flower menus, can be toggled under Options window under Gameplay