@@ -26,12 +26,10 @@ TODO
         - Camera options in Options window under "UI"?
         - Show Gob HP
         - High Prio
-            - Quick Flowermenu
             - Auto Hearth
             - Smart Aim
             - Show Crop Stage
             - Animal Aggro Radius
-        - Bug Flowermenu
         - Experimental Map?
         - Enable profiling -> Show profiling windows via Options under "UI"
         - Fully Movable UI
